--- a/views/styles/profile.css
+++ b/views/styles/profile.css
@@ -1,11 +1,10 @@
 .profile-header-wrapper {
-  display: grid;
   background-color: var(--primary-light);
 }
 
 .profile-header {
   display: grid;
-  grid-template-columns: repeat(3, 33%);
+  grid-template-columns: 29.75% 40.5% 29.75%;
   grid-template-rows: 100%;
 }
 
@@ -117,7 +116,7 @@
   background-color: #dff7ff;
 }
 
-@media only screen and (min-width: 601px) and (max-width: 960px) {
+@media only screen and (min-width: 601px) and (max-width: 800px) {
   .profile-header {
     justify-content: center;
     margin: 0 2%;
@@ -138,14 +137,15 @@
   }
 
   .profile-edit-buttons {
-    top: 160px;
+    top: 170px;
     left: 0;
   }
 
   .edit-profile,
   .edit-avatar {
-    padding: 5px 2px;
-    margin: 2px;
+    font-size: 0.8rem;
+    padding: 3px 2px;
+    margin: 3px;
   }
 
   .profile-info {
@@ -185,9 +185,8 @@
   .profile-header {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 40% 15% 45%;
+    grid-template-rows: 220px 15% 45%;
     margin: 0 2%;
-    justify-content: unset;
   }
 
   .profile-picture {
@@ -211,7 +210,7 @@
     position: relative;
   }
 
-  .profile-name h1 {
+  .profile-name h2 {
     margin: 0;
   }
 
@@ -230,15 +229,8 @@
   .profile-info {
     grid-column: 1 / span 1;
     grid-row: 3 / span 1;
-    margin-bottom: 40%;
     margin-left: 5%;
-  }
-
-  .profile-header h4:after,
-  .profile-header h3:after {
-    position: absolute;
-    bottom: -2px;
-    right: 0;
+    margin-bottom: 10%;
   }
 
   .profile-info h3,
@@ -250,7 +242,6 @@
     width: 70%;
     min-width: 300px;
     max-height: 8rem;
-    transform: translateY(-5px);
   }
 
   .profile-description p {
@@ -259,5 +250,12 @@
 
   .post-block {
     width: 96%;
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  .profile-picture-background {
+    height: 180px;
+    width: 180px;
   }
 }
